--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,3 +3,9 @@
 @import 'base/vars';
 @import 'base/mixins';
 @import 'base/basic';
+
+@import 'components/ui/button.scss';
+
+@import 'components/business/header.scss';
+@import 'components/business/title.scss';
+@import 'components/business/activities.scss';
