--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -135,6 +135,10 @@
 	font-size: 40px;
 	font-weight: 500;
 }
+@mixin medium-42 {
+	font-size: 42px;
+	font-weight: 500;
+}
 @mixin medium-48 {
 	font-size: 48px;
 	font-weight: 500;
