--- a/src/styles/components/business/activities.scss
+++ b/src/styles/components/business/activities.scss
@@ -13,6 +13,14 @@
 		min-height: 282px;
 		@include radius;
 		padding: 40px;
+
+		@include tablet {
+			padding: 20px;
+		}
+
+		@include mobile {
+			padding: 10px;
+		}
 	}
 
 	&__sport {
@@ -23,11 +31,18 @@
 		min-height: 282px;
 		@include radius;
 		padding: 40px;
+
+		@include tablet {
+			padding: 20px;
+		}
+
+		@include mobile {
+			padding: 10px;
+		}
 	}
 
 	h2 {
-		@include medium-42;
-		color: $white;
+		margin-bottom: 20px;
 	}
 
 	ul {
@@ -38,5 +53,14 @@
 			@include regular-24;
 			color: $white;
 		}
+	}
+
+	@include tablet {
+		flex-direction: column;
+		padding: 0;
+	}
+
+	@include mobile {
+		padding: 0;
 	}
 }
