--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,3 +9,4 @@
 @import 'components/business/header.scss';
 @import 'components/business/title.scss';
 @import 'components/business/activities.scss';
+@import 'components/business/stages.scss';
