--- a/src/html/components/business/_header.html
+++ b/src/html/components/business/_header.html
@@ -2,12 +2,12 @@
 	<div class="container">
 		<img src="@icons/logo.svg">
 		<nav class="header__menu" id="menu">
-			<a href="#about">О лагере</a>
-			<a href="#parts">Смены</a>
+			<a href="#activities">О лагере</a>
+			<a href="#stages">Смены</a>
 			<a href="#schedule">Расписание</a>
 			<a href="#reviews">Отзывы</a>
 			<a href="tel:+79153937711">+7-915-393-77-11</a>
-			@@include('components/ui/_button-link.html', {children: 'Оставить заявку'})
+			@@include('components/ui/_button-link.html', {children: 'Оставить заявку', href: '#application'})
 			@@include('components/ui/_button.html', {class: 'header__close', children: '<img src="@icons/close.svg">', id: 'close'})
 		</nav>
 		<a class="header__phone" href="tel:+79153937711">+7-915-393-77-11</a>
