--- a/src/styles/components/ui/_button.scss
+++ b/src/styles/components/ui/_button.scss
@@ -13,6 +13,18 @@
 	align-items: center;
 	justify-content: center;
 	background-color: $pink;
+	position: relative;
+
+	a {
+		height: 100%;
+		width: 100%;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		margin: auto;
+	}
 
 	&:hover {
 		background-color: $white;
