--- a/src/styles/components/business/activities.scss
+++ b/src/styles/components/business/activities.scss
@@ -15,11 +15,11 @@
 		padding: 40px;
 
 		@include tablet {
-			padding: 20px;
+			padding: 30px 20px;
 		}
 
 		@include mobile {
-			padding: 10px;
+			padding: 30px 10px;
 		}
 	}
 
@@ -33,11 +33,11 @@
 		padding: 40px;
 
 		@include tablet {
-			padding: 20px;
+			padding: 30px 20px;
 		}
 
 		@include mobile {
-			padding: 10px;
+			padding: 30px 10px;
 		}
 	}
 
