--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -225,6 +225,10 @@
 	font-size: 70px;
 	font-weight: 700;
 }
+@mixin bold-72 {
+	font-size: 72px;
+	font-weight: 700;
+}
 @mixin bold-93 {
 	font-size: 93px;
 	font-weight: 700;
