--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,3 +10,4 @@
 @import 'components/business/title.scss';
 @import 'components/business/activities.scss';
 @import 'components/business/stages.scss';
+@import 'components/business/summer.scss';
