--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,3 +11,4 @@
 @import 'components/business/activities.scss';
 @import 'components/business/stages.scss';
 @import 'components/business/summer.scss';
+@import 'components/business/schedule.scss';
