--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -209,6 +209,10 @@
 	font-size: 56px;
 	font-weight: 700;
 }
+@mixin bold-58 {
+	font-size: 58px;
+	font-weight: 700;
+}
 @mixin bold-64 {
 	font-size: 64px;
 	font-weight: 700;
