--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,3 +12,4 @@
 @import 'components/business/stages.scss';
 @import 'components/business/summer.scss';
 @import 'components/business/schedule.scss';
+@import 'components/business/application.scss';
