--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -13,3 +13,4 @@
 @import 'components/business/summer.scss';
 @import 'components/business/schedule.scss';
 @import 'components/business/application.scss';
+@import 'components/business/footer.scss';
