--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,6 +5,7 @@
 @import 'base/basic';
 
 @import 'components/ui/button.scss';
+@import 'components/ui/video';
 
 @import 'components/business/header.scss';
 @import 'components/business/title.scss';
@@ -12,5 +13,6 @@
 @import 'components/business/stages.scss';
 @import 'components/business/summer.scss';
 @import 'components/business/schedule.scss';
+@import 'components/business/reviews.scss';
 @import 'components/business/application.scss';
 @import 'components/business/footer.scss';
