--- a/src/styles/components/business/header.scss
+++ b/src/styles/components/business/header.scss
@@ -12,6 +12,11 @@
 		box-shadow: 0px 0px 8px rgba(72, 72, 72, 0.25);
 	}
 
+	&__logo {
+		height: 41px;
+		width: 110px;
+	}
+
 	&__menu {
 		display: flex;
 		align-items: center;
